--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="index.html">Jamie Smith</a></h1>
+							<p>Full Stack Web Developer</p>
 						</div>
 
 					<!-- Nav -->
@@ -56,7 +56,7 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title">The Introduction</div>
+					<div class="title">About Me</div>
 					<div class="container">
 						<p class="style1">So in case you were wondering what this is all about ...</p>
 						<p class="style2">
@@ -74,7 +74,7 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">The Details</div>
+					<div class="title">Skills</div>
 					<div class="container">
 
 						<!-- Image -->
@@ -139,7 +139,7 @@
 
 			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
-					<div class="title">The Endorsements</div>
+					<div class="title">Projects</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
