updated contact href

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 												<section>
 													<h3 class="icon solid fa-comment">LinkedIn</h3>
 													<p>
-														<a href="#">https://www.linkedin.com/in/jamiemsmithdev/</a><br />
+														<a href="https://www.linkedin.com/in/jamiemsmithdev/">https://www.linkedin.com/in/jamiemsmithdev/</a><br />
 													</p>
 												</section>
 											</div>
@@ -212,7 +212,7 @@
 												<section>
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<p>
-														<a href="#">thejamiemsmith@gmail.com</a>
+														thejamiemsmith@gmail.com
 													</p>
 												</section>
 											</div>
@@ -220,7 +220,7 @@
 												<section>
 													<h3 class="icon solid fa-phone">GitHub</h3>
 													<p>
-														<a href="#">https://github.com/notjimjam</a>
+														<a href="https://github.com/notjimjam">https://github.com/notjimjam</a>
 													</p>
 												</section>
 											</div>
